added an h2 element

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Here is the heading i am putting for the first commit</h1>
     <p>you wont see the change from the main</p>
+    <h2>we are adding the same thing</h2>
   </body>
 </html>
