--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <h1>Here is the heading i am putting for the first commit</h1>
     <p>you wont see the change from the main</p>
-    <h2 class="class">
-      <p>We are adding the same thing</p>
-    </h2>
+    <h2 class="class"></h2>
+    <p>We are adding the same thing</p>
   </body>
 </html>
